# ecr

./: CMakeLists.txt
include/ecr/: allocator.h  status.h  version.h
include/ecr/allocator/: standard.h
include/ecr/macro/: assume.h  internal.h  restrict.h
libs/io/: CMakeLists.txt
libs/io/examples/: CMakeLists.txt
libs/io/examples/echo/: echo.c
libs/io/include/ecr/: stream.h
libs/io/include/ecr/stream/: fd.h
libs/io/src/stream/: posix.c  posix.h
libs/io/tests/: CMakeLists.txt  stream_fd_test.cpp
src/: status.c
tests/: CMakeLists.txt  standard_allocator.cpp  status_from_errnum.cpp
tools/scripts/cmake/: BuildType.cmake  LanguageStandard.cmake  SystemTarget.cmake  Testing.cmake
